navbar z-index issues fixed

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,7 @@ nav {
   width: 100%;
   margin: 0 auto;
   height: 70px;
+  z-index: 999;
 }
 
 .offscreenmenu {
@@ -264,7 +265,6 @@ nav {
 .logobuttonwhite {
   height: 24px;
   opacity: 1;
-  transition: .2s ease-out;
 }
 
 .topbar a:hover .logobuttonwhite {
